--- a/helm/templates/keepalived-manifest.yaml
+++ b/helm/templates/keepalived-manifest.yaml
@@ -21,7 +21,7 @@ data:
       containers:
       - name: keepalived
         image: {{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         args: # override options in the Dockerfile
         - --vrrp
         - --log-detail
