--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -7,6 +7,11 @@ image:
   pullPolicy: IfNotPresent
   tag: ''
 
+installer:
+  repository: busybox
+  pullPolicy: IfNotPresent
+  tag: latest
+
 serviceAccount:
   create: false
   annotations: {}
