--- a/charts/kubelived/templates/serviceaccount.yaml
+++ b/charts/kubelived/templates/serviceaccount.yaml
@@ -1,11 +1,11 @@
-{{- if .Values.serviceAccount.create -}}
+{{- if .Values.installer.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "kubelived.serviceAccountName" . }}
   labels:
     {{- include "kubelived.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
+  {{- with .Values.installer.serviceAccount.serviceAccountAnnotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
