--- a/charts/kubelived/values.yaml
+++ b/charts/kubelived/values.yaml
@@ -29,8 +29,6 @@ keepalived:
     tag: '0.2.0'
   config_path: '/etc/keepalived'
   config_file: 'keepalived.conf'
-  initial_state: 'backup'
-  password: 'password'
   health_service_name: 'apiserver'
   health_service_check: '/usr/bin/curl -s -k https://localhost:6443/healthz -o /dev/null'
   health_service_user: 'root'
@@ -38,8 +36,24 @@ keepalived:
   health_service_timeout: '5'
   health_service_rise: '1'
   health_service_fall: '1'
-  router_id: '100'
-  advertisement_interval: '3'
-  virtual_address: '10.10.10.250'
-  interface: 'eth0'
-  unicast_peers: []
+  instances:
+    - iface: VI_1
+      initial_state: 'backup'
+      password: 'password'
+      router_id: '100'
+      advertisement_interval: '3'
+      virtual_address: '192.168.12.2'
+      interface: 'eth0'
+      unicast_peers: []
+      health_service_name: 'apiserver'
+      health_service_interval: '20'
+#    - iface: VI_2
+#      initial_state: 'backup'
+#      password: 'password'
+#      router_id: '100'
+#      advertisement_interval: '3'
+#      virtual_address: '10.0.0.2'
+#      interface: 'ens19'
+#      unicast_peers: []
+#      health_service_name: 'apiserver'
+#      health_service_interval: '15'
